--- a/06_Dom.js/one.html
+++ b/06_Dom.js/one.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> // This line indicates the document type and version of HTML being used.
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -13,3 +13,9 @@
     
 </body>
 </html>
+
+<!-- DOM (Document Object Model) in JavaScript is a way to represent
+     the structure of a web page so that JavaScript can access, 
+     change, or delete elements like text, images, or buttons. -->
+
+     <!-- DOM is the bridge between HTML and JavaScript. It turns your web page into a tree-like structure that JavaScript can interact with. -->
