--- a/06_Dom.js/one.html
+++ b/06_Dom.js/one.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-    <div class="bg-black">
+    <div id="title" class="bg-black">
         <h1>Dom leaning</h1>
         <p>Lorem ipsum dolor sit amet.</p>
     </div>
