--- a/06_Dom.js/one.html
+++ b/06_Dom.js/one.html
@@ -19,3 +19,6 @@
      change, or delete elements like text, images, or buttons. -->
 
      <!-- DOM is the bridge between HTML and JavaScript. It turns your web page into a tree-like structure that JavaScript can interact with. -->
+
+// title.textContent = "New Title"; // This line changes the text inside the <h1> element to "New Title". hidden things are shown 
+// ttile.innertext = "New Title"; // This line changes the text inside the <h1> element to "New Title". // hidden things are not shown in the browser    
