--- a/06_Dom.js/two.html
+++ b/06_Dom.js/two.html
@@ -1,34 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-
-
-</head>
-<body style="background-color: #212121; color: #fff;">
-
+  </head>
+  <body style="background-color: #212121; color: #fff">
     <div class="parent">
-        <div class="day">Monday</div>
-        <div class="day">Tuesday</div>
-        <div class="day">Wednesday</div>
-        <div class="day">Thursday</div>
+      <div class="day">Monday</div>
+      <div class="day">Tuesday</div>
+      <div class="day">Wednesday</div>
+      <div class="day">Thursday</div>
     </div>
-</body>
-<script>
-   const parent =  document.querySelector('.parent')
-//    console.log(parent);
-//    console.log(parent.children[1].innerHTML);// InnerHTML is defined as the HTML content of an element. 
-   // console.log(parent.children[1].textContent);// Tuesday
-//    for (let i = 0; i < parent.children.length; i++) {
-//        console.log(parent.children[i].innerHTML);
-//    }
-   parent.children[1].style.color = 'red'; // Change the color of Tuesday to red
-   console.log(parent.firstElementChild); // Access the first child element
-   console.log(parent.lastElementChild);
+  </body>
+  <script>
+    const parent = document.querySelector(".parent");
+    //    console.log(parent);
+    //    console.log(parent.children[1].innerHTML);// InnerHTML is defined as the HTML content of an element.
+    // console.log(parent.children[1].textContent);// Tuesday
+    //    for (let i = 0; i < parent.children.length; i++) {
+    //        console.log(parent.children[i].innerHTML);
+    //    }
+    parent.children[1].style.color = "red"; // Change the color of Tuesday to red
+    // console.log(parent.firstElementChild); // Access the first child element
+    // console.log(parent.lastElementChild);
 
-   const dayOne = document.querySelector('.day') // Change the color of the first day to blue
-   console.log(dayOne);
-</script>
+    const dayOne = document.querySelector(".day"); // Change the color of the first day to blue
+    // console.log(dayOne);
+    // console.log(dayOne.parentElement);
+    // console.log(dayOne.nextElementSibling);
+    console.log("nodes :" ,parent.childNodes); // Access all child nodes of the parent
+    
+
+  </script>
 </html>
