--- a/06_Dom.js/three.html
+++ b/06_Dom.js/three.html
@@ -20,5 +20,6 @@ div.style.backgroundColor = "red";
 div.style.padding = "12px";
 const text = document.createTextNode("Hello World");
 div.appendChild(text); // Append text to the div
+document.body.appendChild(div); // Append the div to the body
 </script>
 </html>
